--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.1"
     defaultConfig {
-        vectorDrawables.useSupportLibrary = true
         applicationId "zevioo.zampple.com.zevioo"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 25
 
         //        X-JJ-KK-LLL
@@ -73,6 +72,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
