--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -67,7 +68,10 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:1.0.0-alpha1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1'
-
+    // navigation bottom
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
+    // badge in navigation bottom
+    compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
